06/23 - Security Patch GetRatePHP.class RateDialog.class 위의 2개의 클래스는 서버주소 보안문제로 deprecated되었습니다.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
   compile 'com.romainpiel.shimmer:library:1.3.0'
   compile 'com.android.support:support-v4:22.2.0'
   compile 'com.android.support:design:22.2.0'
+  compile 'jp.wasabeef:recyclerview-animators:1.2.0@aar'
 }
